<resources>


    <string name="app_name">submissionMADE4</string>

    <string name="movie">Movie</string>

    <string name="tv_show">Tv Show</string>
    <string name="change_language_settings">change language settings</string>
    <string name="ini_main_activity" translatable="false">ini main activity</string>
    <string name="title_movie_received" translatable="false">title_movie_received</string>
    <string name="overview" translatable="false">overview</string>
    <string name="title_movie_received2" translatable="false">title_movie_received2</string>


    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite Tv Show</string>

    <string name="remove_from_favorite">remove from favorite</string>
    <string name="add_from_favorite">Add To Favorite</string>
    <string name="appwidget_text">Movie Banner</string>
    <string name="empty_text">NO DATA</string>

    <string name="search_movie">search movie…</string>
    <string name="search_tv_show">search tv show…</string>


    <string name="judul_daily">Whats New?</string>
    <string name="desk_daily">Check out latest movies!</string>

    <string name="today_release">New Movie Just Released : </string>
    <string name="key_today_reminder">key_today_reminder</string>
    <string name="summary_daily_reminder">You will reveiced daily reminder every 7 AM</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="key_release_reminder">key_release_reminder</string>
    <string name="summary_release_reminder">You will receive daily movie release info every 8 AM</string>
    <string name="release_reminder">New Movie Reminder</string>
    <string name="notification_settings">notification settings</string>
    <string name="title_detail">Title :</string>
    <string name="description_detail">Description :</string>
    <string name="poster_movie_detail">Poster Movie :</string>
    <string name="favorite_button_detail"><![CDATA[Favorite Button ->]]></string>
    <string name="result">Result : </string>
    <string name="result_with_item">Result : %1$s items</string>

    <string name="title_lang_setting">Language</string>
    <string name="key_change_language">key_change_language_setting</string>
    <string name="summary_change_language">You Can Change This App Language in Setting</string>

    <string name="action_bar_title_movie">Movie Catalogue</string>
    <string name="action_bar_title_tv_show">Tv Show Catalogue</string>
    <string name="poster_image">poster_path image</string>
    <string name="see_details">see details!</string>


    <string name="widget_click_toast">Movie : %1$s</string>
    <string name="overview_example">overview_example</string>
    <string name="movie_overview">Movie Overview</string>

</resources>
