<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Language">
        <Preference
            android:key="@string/key_change_language"
            android:summary="@string/summary_change_language"
            android:title="@string/title_lang_setting">
            <intent android:action="android.settings.LOCALE_SETTINGS" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="Notification">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_today_reminder"
            android:summary="@string/summary_daily_reminder"
            android:title="@string/daily_reminder" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_release_reminder"
            android:summary="@string/summary_release_reminder"
            android:title="@string/release_reminder" />
    </PreferenceCategory>
</PreferenceScreen>